--- a/exercise/RICHARD_RUALES.html
+++ b/exercise/RICHARD_RUALES.html
@@ -23,7 +23,7 @@
                 </li>
                 <li>
                     <h3>Cual es la diferencia entre git y github?</h3>
-                    [Pon tu respuesta]
+                    Git es el software que nos permite implementar el track de nuestro codigo de manera local mientras que Github es un repositorio en la Internet/Nube para llevar el control de versiones del código de manera centralizada.
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
