--- a/exercise/RICHARD_RUALES.html
+++ b/exercise/RICHARD_RUALES.html
@@ -27,7 +27,8 @@
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    Con el comando $git checkout -b &lt;nombre_de_la_rama&gt;
+                    | -b para cambiar a la rama una vez creada (opcional).
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
