--- a/exercise/RICHARD_RUALES.html
+++ b/exercise/RICHARD_RUALES.html
@@ -32,7 +32,7 @@
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    Con el comando $git clone &lt;URL_del_repositorio&gt;
                 </li>
             </ol>
         </div>
