--- a/exercise/walter_gaitan.html
+++ b/exercise/walter_gaitan.html
@@ -19,7 +19,9 @@
             <ol>
                 <li>
                     <h3>Que es un sistema de control de versiones?</h3>
-                    [Pon tu respuesta]
+                    Es una herramienta que funciona para llevar un historial ordenado de todos los cambios que se hacen para un proyecto o repositorio.
+                    Gracias a estas herramientas se puede salvar el estado de un proyecto y agregar detalles sobre los cambios realizados,
+                    tambien se pueden recuperar estados anteriores en caso de realizar un cambio no deseado.
                 </li>
                 <li>
                     <h3>Cual es la diferencia entre git y github?</h3>
