--- a/exercise/walter_gaitan.html
+++ b/exercise/walter_gaitan.html
@@ -25,7 +25,10 @@
                 </li>
                 <li>
                     <h3>Cual es la diferencia entre git y github?</h3>
-                    [Pon tu respuesta]
+                    Git es un sistema de control de versiones, este funciona mayormente de manera local.
+                    Github es un repositorio en la nube donde subir tus proyectos.<br>
+                    Por ejemplo: al colaborar en un proyecto, puedes copiarlo a tu dispositivo y llevar un control de tus cambios con Git y,
+                    una vez listos los cambios, puedes compartir los cambios en el repositorio en linea para que el resto de tu equipo pueda verlo.
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
