--- a/exercise/walter_gaitan.html
+++ b/exercise/walter_gaitan.html
@@ -32,7 +32,8 @@
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    Una vez tengas el repositorio copiado en tu ordenador, puedes utilizar la terminal para ejecutar el siguiente comando
+                    <i>git checkout -b nombre-de-nueva-rama</i>
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
