--- a/exercise/walter_gaitan.html
+++ b/exercise/walter_gaitan.html
@@ -37,7 +37,14 @@
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    <ol>
+                        <li>Una vez en el repositorio a clonar, presionar el boton clonar</li>
+                        <li>Si se tiene el dispositivo agregado por SSH en github, seleccionar SSH, de no ser asi, utilizar HTTPS</li>
+                        <li>Copiar la direccion dada</li>
+                        <li>En tu dispositivo, abrir terminal y utilizar el siguiente comando
+                        <i>git clone urlDeRepositorio.git</i></li>
+                    </ol>
+
                 </li>
             </ol>
         </div>
