DOCS: Answer to the second question
¿What's the difference between Git and Github?

Issue: #2

--- a/exercise/JOHN_MONTAÑO.html
+++ b/exercise/JOHN_MONTAÑO.html
@@ -25,7 +25,8 @@
                 </li>
                 <li>
                     <h3>Cual es la diferencia entre git y github?</h3>
-                    [Pon tu respuesta]
+                    [git es un cliente software instalable de manera local para sistemas operativos windows
+                    mac y linux, y github es un aplicativo web sincronizable con software local]
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
