--- a/exercise/JOHN_MONTAÑO.html
+++ b/exercise/JOHN_MONTAÑO.html
@@ -30,7 +30,7 @@
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    [Desde la consola se crea con el comando git branch nombre_de_la_rama]
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
