--- a/exercise/JOHN_MONTAÑO.html
+++ b/exercise/JOHN_MONTAÑO.html
@@ -34,7 +34,7 @@
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    [Desde la consola se utiliza git clone url_del_repositorio]
                 </li>
             </ol>
         </div>
