--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
             <span id="tagline">Git y Github</span>
         </div>
         <div id="post">
-            <h1>Alumn@: [Nombre Completo]</h1>
+            <h1>Alumn@: Leandro Mocek</h1>
             <ol>
                 <li>
                     <h3>Que es un sistema de control de versiones?</h3>
-                    [Pon tu respuesta]
+                    Es un software que permite gestionar los cambios que se realizan en los archivos, registrando cada movimiento de guardado a lo largo del tiempo.
                 </li>
                 <li>
                     <h3>Cual es la diferencia entre git y github?</h3>
-                    [Pon tu respuesta]
+                    Git es un sistema de control de versiones que trabaja de manera local mientras que Github es un alojamiento en Internet que permite replicar todos nuestros archivos locales de forma remota y compartirlos con otros usuarios.
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    Utilizando el comando "git branch nombre-rama" 
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    Mediante el comando "git clone https://url-remota.com/xxx"
                 </li>
             </ol>
         </div>
