Subo mi archivo index.html

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
             <span id="tagline">Git y Github</span>
         </div>
         <div id="post">
-            <h1>Alumn@: [Nombre Completo]</h1>
+            <h1>Alumn@: Gabriela Ojcius </h1>
             <ol>
                 <li>
                     <h3>Que es un sistema de control de versiones?</h3>
-                    [Pon tu respuesta]
+                    Son herramientas que ayudan al equipo de software a gestionar los cambios en el código con el que se está trabajando a lo largo del tiempo
                 </li>
                 <li>
                     <h3>Cual es la diferencia entre git y github?</h3>
-                    [Pon tu respuesta]
+                    Git es una herramienta de control de versiones mientras que GitHub es una plataforma basada en la nube construida alrededor de Git
                 </li>
                 <li>
                     <h3>Cómo creo una rama en git?</h3>
-                    [Pon tu respuesta]
+                    Con el conmando "git branch NOMBRE-DE-LA-RAMA"
                 </li>
                 <li>
                     <h3>Cómo clono un repositorio?</h3>
-                    [Pon tu respuesta]
+                    Con el comando "git clone https://URL.com/"
                 </li>
             </ol>
         </div>
